...
            TurnListHeaderContent(
                turnList = listOf(
                    Turn(
                        idTurn = 1,
                        codTurnEquip = 1,
                        nroTurn = 1,
                        descrTurn = "TURNO 1"
                    ),
                ),
                setIdTurn = {},
                updateDatabase = {},
                setCloseDialog = {},
                flagAccess = false,
...
